UniDAQ.h

typedef struct _IXUD_DEVICE_INFO_
{
	DWORD dwSize;			//Structure Size
	
	WORD wVendorID;			//Vendor ID
	WORD wDeviceID;			//Device ID
	
	WORD wSubVendorID;		//Sub Vendor ID
	WORD wSubDeviceID;		//Sub Device ID

	DWORD dwBAR[6];			//PCI Bar 0 ~ 5

	UCHAR BusNo;			//the PCI Bus No. in mainboard
	UCHAR DevNo;			//the Slot No. in PCI bus
	UCHAR IRQ;				//IRQ No.
	UCHAR Aux;				//Sub Aux for Tiger series,0xFF=N/A

	DWORD dwBarVirtualAddress[6];   //PCI Bar Virtual Address(For MMIO)

}IXUD_DEVICE_INFO,*PIXUD_DEVICE_INFO;
//extern IXUD_DEVICE_INFO DevInfo[MAX_BOARD_NUMBER];

typedef struct _IXUD_CARD_INFO_
{
	DWORD dwSize;			//Structure size
	DWORD dwModelNo;		//Model Number
	
	//CardID is update when calling the function each time.
    UCHAR CardID;			//for new cards, 0xFF=N/A
	UCHAR wSingleEnded;		//for new cards,1:S.E 2:D.I.F,0xFF=N/A
	WORD wAIOResolution;	//AI/AO Resolution High byte is AI, Low byte is AO

	WORD wAIChannels;		//Number of AI channels(AD)
	WORD wAOChannels;		//Number of AO channels(DA)

	WORD wDIPorts;			//Number of DI ports
	WORD wDOPorts;			//Number of DO ports

	WORD wDIOPorts;			//Number of DIO ports
	WORD wDIOPortWidth;		//The width is 8/16/32 bit.

	WORD wCounterChannels;	//Number of Timers/Counters
	WORD wMemorySize;		//PCI-M512==>512, Units in KB.

	DWORD dwReserved1[6];   //Reserver 

}IXUD_CARD_INFO,*PIXUD_CARD_INFO;
EXPORTS WORD  CALLBACK  Ixud_SearchCard(WORD *wTotalBoards,DWORD dwModelNo);
	
EXPORTS WORD  CALLBACK  Ixud_GetBoardNoByCardID(WORD *wBoardNo,DWORD dwModelNumber,WORD wCardID);
		  
EXPORTS WORD  CALLBACK	Ixud_GetCardInfo(WORD wBoardNo, PIXUD_DEVICE_INFO sDevInfo,PIXUD_CARD_INFO sCardInfo, char *szModelName);
		  
EXPORTS WORD  CALLBACK	Ixud_ReadPort(DWORD dwAddress,WORD wSize,DWORD* dwVal);
				  
EXPORTS WORD  CALLBACK	Ixud_WritePort(DWORD dwAddress,WORD wSize,DWORD  dwVal);
				  
EXPORTS WORD  CALLBACK	Ixud_ReadPort32(DWORD dwAddress,DWORD* dwLow,DWORD* dwHigh);
				  
EXPORTS WORD  CALLBACK	Ixud_WritePort32(DWORD dwAddress,DWORD dwLow,DWORD  dwHigh);
EXPORTS WORD  CALLBACK	Ixud_WritePhyMemory(DWORD dwAddress,WORD wSize,DWORD dwValue);
EXPORTS WORD  CALLBACK	Ixud_ReadPhyMemory(DWORD dwAddress,WORD wSize,DWORD* dwValue);
//Digital I/O functions			
EXPORTS WORD  CALLBACK	Ixud_SetDIOModes32(WORD wBoardNo,DWORD dwDioMode);
			  
EXPORTS WORD  CALLBACK	Ixud_SetDIOMode(WORD wBoardNo,WORD wPortNo,WORD wDioMode);
EXPORTS WORD  CALLBACK	Ixud_ReadDI(WORD wBoardNo,WORD wPortNo,DWORD *dwDIVal);
				  
EXPORTS WORD  CALLBACK	Ixud_WriteDO(WORD wBoardNo,WORD wPortNo,DWORD dwDOVal);
EXPORTS WORD  CALLBACK	Ixud_ReadDI32(WORD wBoardNo,WORD wPortN,DWORD* dwLow,DWORD* dwHigh);
				  
EXPORTS WORD  CALLBACK	Ixud_WriteDO32(WORD wBoardNo,WORD wPortNo,DWORD dwLow ,DWORD dwHigh);
EXPORTS WORD  CALLBACK	Ixud_ReadDIBit(WORD wBoardNo,WORD wPortNo, WORD wBitNo, WORD *wDIVal);
				  
EXPORTS WORD  CALLBACK	Ixud_WriteDOBit(WORD wBoardNo,WORD wPortNo, WORD wBitNo, WORD wDOVal);
EXPORTS WORD  CALLBACK  Ixud_SoftwareReadbackDO(WORD wBoardNo,WORD wPortNo,DWORD *dwDOVal);
EXPORTS WORD  CALLBACK  Ixud_SetPWMOutput(WORD wBoardNo,WORD wChannel,WORD wMode,float fFrequency,float fDutyRate,float fDelayUS);
EXPORTS WORD  CALLBACK  Ixud_StartDO(WORD wBoardNo, WORD wPortNo,DWORD dwMode, float fSamplingRate, DWORD dwDataCount,DWORD dwCycleNum, DWORD dwDOVal[]);
EXPORTS WORD  CALLBACK  Ixud_StopDO(WORD wBoardNo,WORD wPortNo);
EXPORTS WORD  CALLBACK  Ixud_StartDI(WORD wBoardNo, WORD wPortNo,DWORD dwMode, float fSamplingRate, DWORD dwDataCount);
EXPORTS WORD  CALLBACK  Ixud_StopDI(WORD wBoardNo,WORD wPortNo);
EXPORTS WORD  CALLBACK	Ixud_GetDIBufferH(WORD wBoardNo,WORD wPortNo,DWORD dwDataCount,DWORD hValue[]);