src/unidaq/UniDaqLibrary.java


	/**
	 * Original signature : <code>WORD Ixud_SearchCard(WORD*, DWORD)</code><br>
	 * <i>native declaration : line 244</i>
	 */
	public static native short Ixud_SearchCard(ShortBuffer wTotalBoards, int dwModelNo);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetBoardNoByCardID(WORD*, DWORD, WORD)</code><br>
	 * <i>native declaration : line 245</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_GetBoardNoByCardID(java.nio.ShortBuffer, int, short)}
	 *             and
	 *             {@link #Ixud_GetBoardNoByCardID(com.sun.jna.ptr.ShortByReference, int, short)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_GetBoardNoByCardID(ShortByReference wBoardNo, int dwModelNumber, short wCardID);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetBoardNoByCardID(WORD*, DWORD, WORD)</code><br>
	 * <i>native declaration : line 245</i>
	 */
	public static native short Ixud_GetBoardNoByCardID(ShortBuffer wBoardNo, int dwModelNumber, short wCardID);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetCardInfo(WORD, PIXUD_DEVICE_INFO, PIXUD_CARD_INFO, char*)</code><br>
	 * <i>native declaration : line 246</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_GetCardInfo(short, unidaq.IXUD_DEVICE_INFO, unidaq.IXUD_CARD_INFO, java.nio.ByteBuffer)}
	 *             and
	 *             {@link #Ixud_GetCardInfo(short, unidaq.IXUD_DEVICE_INFO, unidaq.IXUD_CARD_INFO, com.sun.jna.Pointer)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_GetCardInfo(short wBoardNo, IXUD_DEVICE_INFO sDevInfo, IXUD_CARD_INFO sCardInfo,
			Pointer szModelName);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetCardInfo(WORD, PIXUD_DEVICE_INFO, PIXUD_CARD_INFO, char*)</code><br>
	 * <i>native declaration : line 246</i>
	 */
	public static native short Ixud_GetCardInfo(short wBoardNo, IXUD_DEVICE_INFO sDevInfo, IXUD_CARD_INFO sCardInfo,
			ByteBuffer szModelName);

	/**
	 * Original signature : <code>WORD Ixud_ReadPort(DWORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 248</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadPort(int, short, java.nio.IntBuffer)} and
	 *             {@link #Ixud_ReadPort(int, short, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadPort(int dwAddress, short wSize, IntByReference dwVal);

	/**
	 * Original signature : <code>WORD Ixud_ReadPort(DWORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 248</i>
	 */
	public static native short Ixud_ReadPort(int dwAddress, short wSize, IntBuffer dwVal);

	/**
	 * Original signature : <code>WORD Ixud_WritePort(DWORD, WORD, DWORD)</code><br>
	 * <i>native declaration : line 249</i>
	 */
	public static native short Ixud_WritePort(int dwAddress, short wSize, int dwVal);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadPort32(DWORD, DWORD*, DWORD*)</code><br>
	 * <i>native declaration : line 250</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadPort32(int, java.nio.IntBuffer, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_ReadPort32(int, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadPort32(int dwAddress, IntByReference dwLow, IntByReference dwHigh);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadPort32(DWORD, DWORD*, DWORD*)</code><br>
	 * <i>native declaration : line 250</i>
	 */
	public static native short Ixud_ReadPort32(int dwAddress, IntBuffer dwLow, IntBuffer dwHigh);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WritePort32(DWORD, DWORD, DWORD)</code><br>
	 * <i>native declaration : line 251</i>
	 */
	public static native short Ixud_WritePort32(int dwAddress, int dwLow, int dwHigh);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WritePhyMemory(DWORD, WORD, DWORD)</code><br>
	 * <i>native declaration : line 252</i>
	 */
	public static native short Ixud_WritePhyMemory(int dwAddress, short wSize, int dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadPhyMemory(DWORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 253</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadPhyMemory(int, short, java.nio.IntBuffer)} and
	 *             {@link #Ixud_ReadPhyMemory(int, short, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadPhyMemory(int dwAddress, short wSize, IntByReference dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadPhyMemory(DWORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 253</i>
	 */
	public static native short Ixud_ReadPhyMemory(int dwAddress, short wSize, IntBuffer dwValue);

	/**
	 * Digital I/O functions<br>
	 * Original signature : <code>WORD Ixud_SetDIOModes32(WORD, DWORD)</code><br>
	 * <i>native declaration : line 256</i>
	 */
	public static native short Ixud_SetDIOModes32(short wBoardNo, int dwDioMode);

	/**
	 * Original signature : <code>WORD Ixud_SetDIOMode(WORD, WORD, WORD)</code><br>
	 * <i>native declaration : line 257</i>
	 */
	public static native short Ixud_SetDIOMode(short wBoardNo, short wPortNo, short wDioMode);

	/**
	 * Original signature : <code>WORD Ixud_ReadDI(WORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 258</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadDI(short, short, java.nio.IntBuffer)} and
	 *             {@link #Ixud_ReadDI(short, short, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadDI(short wBoardNo, short wPortNo, IntByReference dwDIVal);

	/**
	 * Original signature : <code>WORD Ixud_ReadDI(WORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 258</i>
	 */
	public static native short Ixud_ReadDI(short wBoardNo, short wPortNo, IntBuffer dwDIVal);

	/**
	 * Original signature : <code>WORD Ixud_WriteDO(WORD, WORD, DWORD)</code><br>
	 * <i>native declaration : line 259</i>
	 */
	public static native short Ixud_WriteDO(short wBoardNo, short wPortNo, int dwDOVal);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadDI32(WORD, WORD, DWORD*, DWORD*)</code><br>
	 * <i>native declaration : line 260</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadDI32(short, short, java.nio.IntBuffer, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_ReadDI32(short, short, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadDI32(short wBoardNo, short wPortN, IntByReference dwLow, IntByReference dwHigh);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadDI32(WORD, WORD, DWORD*, DWORD*)</code><br>
	 * <i>native declaration : line 260</i>
	 */
	public static native short Ixud_ReadDI32(short wBoardNo, short wPortN, IntBuffer dwLow, IntBuffer dwHigh);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WriteDO32(WORD, WORD, DWORD, DWORD)</code><br>
	 * <i>native declaration : line 261</i>
	 */
	public static native short Ixud_WriteDO32(short wBoardNo, short wPortNo, int dwLow, int dwHigh);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadDIBit(WORD, WORD, WORD, WORD*)</code><br>
	 * <i>native declaration : line 262</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadDIBit(short, short, short, java.nio.ShortBuffer)}
	 *             and
	 *             {@link #Ixud_ReadDIBit(short, short, short, com.sun.jna.ptr.ShortByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadDIBit(short wBoardNo, short wPortNo, short wBitNo, ShortByReference wDIVal);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadDIBit(WORD, WORD, WORD, WORD*)</code><br>
	 * <i>native declaration : line 262</i>
	 */
	public static native short Ixud_ReadDIBit(short wBoardNo, short wPortNo, short wBitNo, ShortBuffer wDIVal);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WriteDOBit(WORD, WORD, WORD, WORD)</code><br>
	 * <i>native declaration : line 263</i>
	 */
	public static native short Ixud_WriteDOBit(short wBoardNo, short wPortNo, short wBitNo, short wDOVal);

	/**
	 * Original signature :
	 * <code>WORD Ixud_SoftwareReadbackDO(WORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 264</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_SoftwareReadbackDO(short, short, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_SoftwareReadbackDO(short, short, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_SoftwareReadbackDO(short wBoardNo, short wPortNo, IntByReference dwDOVal);

	/**
	 * Original signature :
	 * <code>WORD Ixud_SoftwareReadbackDO(WORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 264</i>
	 */
	public static native short Ixud_SoftwareReadbackDO(short wBoardNo, short wPortNo, IntBuffer dwDOVal);

	/**
	 * Original signature :
	 * <code>WORD Ixud_SetPWMOutput(WORD, WORD, WORD, float, float, float)</code><br>
	 * <i>native declaration : line 265</i>
	 */
	public static native short Ixud_SetPWMOutput(short wBoardNo, short wChannel, short wMode, float fFrequency,
			float fDutyRate, float fDelayUS);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartDO(WORD, WORD, DWORD, float, DWORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 266</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_StartDO(short, short, int, float, int, int, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_StartDO(short, short, int, float, int, int, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_StartDO(short wBoardNo, short wPortNo, int dwMode, float fSamplingRate,
			int dwDataCount, int dwCycleNum, IntByReference dwDOVal);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartDO(WORD, WORD, DWORD, float, DWORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 266</i>
	 */
	public static native short Ixud_StartDO(short wBoardNo, short wPortNo, int dwMode, float fSamplingRate,
			int dwDataCount, int dwCycleNum, IntBuffer dwDOVal);

	/**
	 * Original signature : <code>WORD Ixud_StopDO(WORD, WORD)</code><br>
	 * <i>native declaration : line 267</i>
	 */
	public static native short Ixud_StopDO(short wBoardNo, short wPortNo);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartDI(WORD, WORD, DWORD, float, DWORD)</code><br>
	 * <i>native declaration : line 268</i>
	 */
	public static native short Ixud_StartDI(short wBoardNo, short wPortNo, int dwMode, float fSamplingRate,
			int dwDataCount);

	/**
	 * Original signature : <code>WORD Ixud_StopDI(WORD, WORD)</code><br>
	 * <i>native declaration : line 269</i>
	 */
	public static native short Ixud_StopDI(short wBoardNo, short wPortNo);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetDIBufferH(WORD, WORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 270</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_GetDIBufferH(short, short, int, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_GetDIBufferH(short, short, int, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_GetDIBufferH(short wBoardNo, short wPortNo, int dwDataCount, IntByReference hValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetDIBufferH(WORD, WORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 270</i>
	 */
	public static native short Ixud_GetDIBufferH(short wBoardNo, short wPortNo, int dwDataCount, IntBuffer hValue);
